--- a/src/components/HeaderNav/HeaderNav.scss
+++ b/src/components/HeaderNav/HeaderNav.scss
@@ -1,9 +1,11 @@
+@import '../../styles/shared.scss';
+
 .ui.menu.top-menu {
   border: none;
-
   .logo {
     width: 17rem;
   }
+
   .nav-container {
     justify-content: space-between;
     flex-grow: 1;
